fix bugs, add error logging
